k8s/tools/gogs/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs
  namespace: default
  labels:
    app: gogs
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gogs
  template:
    metadata:
      labels:
        app: gogs
    spec:
      containers:
        - name: gogs
          image: gogs/gogs:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: ssh
              containerPort: 2222
              protocol: TCP
          volumeMounts:
            - name: gogs-data
              mountPath: /data
      volumes:
        - name: gogs-data
          persistentVolumeClaim:
            claimName: gogs-data
