k8s/tools/gogs/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gogs-service
  namespace: default
  labels:
    app: gogs
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: ssh
      protocol: TCP
  selector:
    app: gogs
